kubernetes/apps/network/stunner-gateway/config/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: stunner
    namespace: network
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
